[tool.poetry]
name = "tts-cache"
version = "0.1.0"
description = ""
authors = ["bebora <simone.rizzo@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
minio = "^7.0.3"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
mypy = "^0.812"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
