[tool.poetry]
name = "tts-cache"
version = "0.1.0"
description = ""
authors = ["bebora <simone.rizzo@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"

fastapi = "^0.63.0"
minio = "^7.0.3"
python-dotenv = "^0.17.1"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
gunicorn = "^20.1.0"
google-cloud-texttospeech = "^2.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
